# invoice-extraction-qc-system

./: .dockerignore  .gitignore  AI_USAGE_NOTES.md  ASSIGNMENT_CHECKLIST.md  Dockerfile  EXPECTED_OUTPUT.md  FINAL_VERIFICATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REQUIREMENTS_VERIFICATION.md  RUN_COMMANDS.md  START_SERVERS.md  TROUBLESHOOTING.md  error_report.json  pyproject.toml  requirements.txt  run_api.py  sample_invoice.json  sample_invoice_with_errors.json  setup.py  test_output.json
api/: __init__.py  app.py
frontend/: DASHBOARD_FEATURES.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
invoice_qc/: __init__.py  extractor.py  schema.py  validator.py
invoice_qc/cli/: __init__.py  __main__.py  main.py
invoice_qc/utils/: __init__.py  patterns.py  pdf_reader.py
tests/: __init__.py  test_extractor.py  test_validator.py
